--- a/Admin/Pages/Shared/_Layout.cshtml
+++ b/Admin/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     string extraClass = "";
     try
     {
-        bool? hideBodyOverflow = (bool?)ViewData["HideBodyOverflow"];
+        bool? hideBodyOverflow = (bool?) ViewData["HideBodyOverflow"];
         if (hideBodyOverflow != null)
         {
             if (hideBodyOverflow.Value)
@@ -43,11 +43,7 @@
     <header>
         <nav class="navbar navbar-expand-sm rememberIfVisited navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 no-padding">
             <div class="container nav-container">
-                <a class="navbar-brand smooth-underline" asp-area="" asp-page="/Index">CCG CCT Admin</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand smooth-underline rememberIfVisited" asp-area="" asp-page="/Index">CCG CCT Admin</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item" id="navHome">
