--- a/Admin/Pages/Similar/ExecutiveSummary.cshtml
+++ b/Admin/Pages/Similar/ExecutiveSummary.cshtml
@@ -22,7 +22,7 @@
 
             @* Inline width property is used here because it applies flawlessly in print mode *@
 
-            <th style="width: 8.33%;"><b class="sort-column-percents">Level</b></th>
+            <th style="width: 8.33%;"><b class="sorted sort-column-percents">Level</b></th>
             <th style="width: 33.33%;"><b class="sort-column-percents">Title English</b></th>
             <th style="width: 33.33%;"><b class="sort-column-percents">Title French</b></th>
             <th style="width: 25%;">
