--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -27,8 +27,8 @@
 
     <div class="cct-member-img cct-member-hide-mobile cct-member-hide-tablet">
         <div class="container">
-            <div class="row mrgn-bttm-lg">
-                <div class="col-md-7">
+            <div class="row mrgn-tp-sm mrgn-bttm-sm">
+                <div class="col-md-7 mrgn-tp-lg">
                     <h1>@Localizer["members"]</h1>
                     <h2 class="mrgn-bttm-lg">@Localizer["AllPositions"]</h2>
                 </div>
