--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -426,7 +426,46 @@
                             if (c.Active != 0)
                             {
                                 <tr>
-                                    <td>@(isEnglish ? c.NameEng : c.NameFre) @(isEnglish ? c.DescEng : c.DescFre)</td>
+                                    <td>
+                                        @(isEnglish ? c.NameEng : c.NameFre)
+                                        @{
+                                            var description = isEnglish ? c.CertificateDescEng : c.CertificateDescFre;
+                                            try
+                                            {
+                                                foreach (var desc in description.Split("\r\n"))
+                                                {
+                                                    if (desc.Contains("http"))
+                                                    {
+
+                                                        try
+                                                        {
+                                                            var dashes_index = desc.IndexOf("---");
+                                                            var link = desc.Substring(desc.IndexOf("http"), dashes_index);
+                                                            var textlen = desc.IndexOf("---", dashes_index + 1) - dashes_index - 3;
+                                                            var linktext = desc.Substring(dashes_index + 3, textlen);
+                                                            <a href="@link" target="_blank">
+                                                                @linktext
+                                                            </a> <span style="color:#000; font-size:14px" class="glyphicon glyphicon-new-window"></span>
+                                                        }
+                                                        catch
+                                                        {
+                                                            <span>@desc</span>
+                                                        }
+
+                                                    }
+                                                    else
+                                                    {
+                                                        <span>@desc</span><br />
+                                                    }
+                                                }
+                                            }
+                                            catch
+                                            {
+                                                <span>@description</span>
+                                            }
+
+                                        }
+                                    </td>
                                 </tr>
                             }
                         }
@@ -452,9 +491,47 @@
                     {
                         if (d.Active != 0)
                         {
-                            var key = "c" + d.Id.ToString();
+                            //var key = "c" + d.Id.ToString();
                             <tr>
-                                <td>@(isEnglish ? d.NameEng : d.NameFre) @(isEnglish ? d.DescEng : d.DescFre)</td>
+                                <td>
+                                    @(isEnglish ? d.NameEng : d.NameFre)
+                                    @{
+                                        var description = isEnglish ? d.CertificateDescEng : d.CertificateDescFre;
+                                        try
+                                        {
+                                            foreach (var desc in description.Split("\r\n"))
+                                            {
+                                                if (desc.Contains("http"))
+                                                {
+
+                                                    try
+                                                    {
+                                                        var dashes_index = desc.IndexOf("---");
+                                                        var link = desc.Substring(desc.IndexOf("http"), dashes_index);
+                                                        var textlen = desc.IndexOf("---", dashes_index + 1) - dashes_index - 3;
+                                                        var linktext = desc.Substring(dashes_index + 3, textlen);
+                                                        <a href="@link" target="_blank">
+                                                            @linktext
+                                                        </a> <span style="color:#000; font-size:14px" class="glyphicon glyphicon-new-window"></span>
+                                                    }
+                                                    catch
+                                                    {
+                                                        <span>@desc</span>
+                                                    }
+
+                                                }
+                                                else
+                                                {
+                                                    <span>@desc</span><br />
+                                                }
+                                            }
+                                        }
+                                        catch
+                                        {
+                                            <span>@description</span>
+                                        }
+                                    }
+                                </td>
                                 <td class="text-center bg-success">@Localizer[d.CurrentPositionHas]</td>
                                 <td class="text-center bg-info">@Localizer[d.ObjectivePositionHas]</td>
                             </tr>
