--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -405,7 +405,38 @@
                 {
                     var key = "c" + c.Id.ToString();
                     <tr>
-                        <td colspan="2">@(isEnglish ? c.NameEng : c.NameFre) @(isEnglish ? c.DescEng : c.DescFre)</td>
+                        <td colspan="2">
+                            @(isEnglish ? c.NameEng : c.NameFre)
+                            @{
+                                var description = isEnglish ? c.CertificateDescEng : c.CertificateDescFre;
+                                foreach (var desc in description.Split("\r\n"))
+                                {
+                                    if (desc.Contains("http"))
+                                    {
+
+                                        try
+                                        {
+                                            var dashes_index = desc.IndexOf("---");
+                                            var link = desc.Substring(desc.IndexOf("http"), dashes_index);
+                                            var textlen = desc.IndexOf("---", dashes_index + 1) - dashes_index - 3;
+                                            var linktext = desc.Substring(dashes_index + 3, textlen);
+                                            <a href="@link" target="_blank">
+                                                @linktext
+                                            </a> <span style="color:#000; font-size:14px" class="glyphicon glyphicon-new-window"></span>
+                                        }
+                                        catch
+                                        {
+                                            <span>@desc</span>
+                                        }
+
+                                    }
+                                    else
+                                    {
+                                        <span>@desc</span><br />
+                                    }
+                                }
+                            }
+                        </td>
                     </tr>
                 }
             }
